Bug fix: bedtime textarea was too big, causing scroll bars.

--- a/stylesheets/app.sass
+++ b/stylesheets/app.sass
@@ -131,6 +131,8 @@ $section-padding: 20px
       font-size: 20pt
       background-color: transparent
       color: #040
+      // 400px not 500
+      height: 400px
 
     .bedtime-plan-highlight
       background-color: #0f0
